# papers

./: .gitignore  CLAUDE.md  README.md  backup.sh  papers  restore.sh  start.sh
backend/: Dockerfile  arxiv_client.py  database.py  main.py  models.py  papers_with_code.py  pyproject.toml  requirements-prod.txt  semantic_scholar.py  storage.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  LatexText.tsx  MarkdownLatex.tsx  PaperCard.tsx  PaperDetail.tsx  PaperGrid.tsx  RecommendationsPage.tsx  SyncIndicator.tsx
frontend/src/hooks/: usePapers.ts  useRecommendations.ts
frontend/src/types/: paper.ts
