[project]
name = "papers-backend"
version = "0.1.0"
description = "Paper management API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "sqlmodel>=0.0.14",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "marker-pdf>=1.6.2",
    "transformers<4.48",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
